fixed white space on mobile device
avatar face width

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,7 +13,7 @@ $secondary: darken($purple, 10%);
 $font-family-sans-serif: 'Lato', "Helvetica Neue", Arial, sans-serif !default;
 $headings-font-family: 'Montserrat', "Helvetica Neue", Arial, sans-serif !default;
 $headings-font-weight: 700 !default;
-
+$cursive-font-family: 'Pacifico', cursive;
 
 // Override Bootstrap border variables
 $border-width: 0.125rem !default;
