--- a/src/scss/layout/_masthead.scss
+++ b/src/scss/layout/_masthead.scss
@@ -3,7 +3,8 @@
   padding-bottom: 6rem;
   .masthead-heading {
     font-size: 2.75rem;
-    line-height: 2.75rem;
+    line-height: 3rem;
+    font-family: $cursive-font-family;
   }
   .masthead-subheading {
     font-size: 1.25rem;
@@ -19,7 +20,7 @@
     padding-bottom: 6rem;
     .masthead-heading {
       font-size: 4rem;
-      line-height: 3.5rem;
+      line-height: 4.5rem;
     }
     .masthead-subheading {
       font-size: 1.5rem;
